Reestructuración, optimización y corrección de errores de código. Actualización a la 0.4.3.